--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     <!-- ---------- loader ---------- -->
     <div id="preloader">
         <div id="loading-wrapper" class="show">
-            <div id="loading-text"> <img src="assets/img/logo_loading.png" alt=""> </div>
+            <div id="loading-text"> <img src="assets/img/logos-50.png" alt=""> </div>
             <div id="loading-content"></div>
         </div>
     </div>
@@ -83,22 +83,12 @@
                             blog
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="sign-in.html">
-                            Signup
-                        </a>
-                    </li>
                 </ul>
                 <div class="nav-side">
-                    <div class="d-flex align-items-center">
-                        <span class="nav-item">
-                            <a class="nav-link" href="sign-in.html">
-                                <i class="bi bi-person fs-5 me-2"></i>
-                                sign in
-                            </a>
-                        </span>
-                    </div>
-                </div>
+                            <button class="butn bg-transparent border-main border-2 rounded-pill hover-orange1 color-main hover-shadow" type="submit">
+                                <a span  href="sign-in.html"> sign in</span></a>
+                            </button>
+                        </div>
             </div>
         </div>
     </nav>
