--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="keywords" content="HTML5 Template xirvon Multi-Purpose themeforest" />
+    <meta name="description" content="xirvon - Multi-Purpose HTML5 Template" />
     <meta name="author" content="" />
 
     <!-- Title  -->
-    <title>Iteck</title>
+    <title>xirvon</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/fav.png" title="Favicon" sizes="16x16" />
@@ -44,7 +44,7 @@
     <!-- ---------- loader ---------- -->
     <div id="preloader">
         <div id="loading-wrapper" class="show">
-            <div id="loading-text"> <img src="assets/img/logo_loading.png" alt=""> </div>
+            <div id="loading-text"> <img src="assets/img/logos-50.png" alt=""> </div>
             <div id="loading-content"></div>
         </div>
     </div>
@@ -88,21 +88,12 @@
                                     blog
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="sign-in.html">
-                                    Signup
-                                </a>
-                            </li>
+                            
                         </ul>
                         <div class="nav-side">
-                            <div class="d-flex align-items-center">
-                                <span class="nav-item">
-                                    <a class="nav-link" href="page-contact-5.html">
-                                        <i class="bi bi-person fs-5 me-2"></i>
-                                        sign in
-                                    </a>
-                                </span>
-                            </div>
+                            <button class="butn bg-transparent border-main border-2 rounded-pill hover-orange1 color-main hover-shadow" type="submit">
+                                <a span  href="sign-in.html"> sign in</span></a>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -537,7 +528,7 @@
                             <div class="d-flex align-items-center mt-40 wow fadeInUp">
                                 <div class="inf ms-4">
                                     <p class="color-999"> Support Email </p>
-                                    <a href="#" class="color-000 fw-bold"> info@support-iteck.com </a>
+                                    <a href="#" class="color-000 fw-bold"> info@support-xirvon.com </a>
                                 </div>
                             </div>
                         </div>
@@ -942,7 +933,7 @@
                                 <p> Our highly skilled development teams specialized in data analysis. </p>
                                 <ul class="mt-20">
                                     <li> 
-                                        <a href="#"> <i class="fas fa-envelope-open me-2 color-main"></i> info@iteck-info.com </a>    
+                                        <a href="#"> <i class="fas fa-envelope-open me-2 color-main"></i> info@xirvon-info.com </a>    
                                     </li>
                                     <li> 
                                         <a href="#"> <i class="fas fa-phone me-2 color-main"></i> 907 000 999 22 </a>    
@@ -983,7 +974,7 @@
                                 <h6 class="foot-title"> Other Pages </h6>
                                 <ul>
                                     <li>
-                                        <a href="#"> About Iteck </a>
+                                        <a href="#"> About xirvon </a>
                                     </li>
                                     <li>
                                         <a href="#"> Investors </a>
