--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="text-center mb-100">
                     <h2 class="ltspc-20 text-uppercase fs-1 lh-1 mb-50 mt-30 color-blue5">(+23) 1535 09 62</h2>
-                    <h4 class="fw-normal mb-20 color-000">contact@xirvonsolution.online</h4>
+                    <h4 class="fw-normal mb-20 color-000">contact@xirvon.online</h4>
                     <h4 class="fw-normal mb-10 color-000">58 Howard St, San Francisco, CA 341</h4>
                 </div>
                 <div class="content">
@@ -206,7 +206,7 @@
                             +031 5689 89 98
                         </small>
                         <small class="text d-block">
-                            contact@xirvonsolution.co
+                            contact@xirvon.online
                         </small>
                     </div>
                 </div>
