--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                             <div class="d-flex align-items-center mt-40 wow fadeInUp">
                                 <div class="inf ms-4">
                                     <p class="color-999"> Support Email </p>
-                                    <a href="#" class="color-000 fw-bold"> info@support-xirvon.com </a>
+                                    <a href="#" class="color-000 fw-bold"> support@xirvon.online </a>
                                 </div>
                             </div>
                         </div>
@@ -562,7 +562,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <p> “ It uses a directory of over 20 latin words combine a half of model sentence structures. ” </p>
+                                        . ” </p>
                                     <img src="assets/img/icons/qout8.png" alt="" class="icon">
                                 </div>
                                 <div class="author mt-40">
@@ -586,7 +586,8 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <p> “ It uses a directory of over 20 latin words combine a half of model sentence structures. ” </p>
+                                    <p> “ Xirvon is soo afforadable and unique, i have never seen anything like it
+                                         in recent times ” </p>
                                     <img src="assets/img/icons/qout8.png" alt="" class="icon">
                                 </div>
                                 <div class="author mt-40">
@@ -610,7 +611,8 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
-                                    <p> “ It uses a directory of over 20 latin words combine a half of model sentence structures. ” </p>
+                                    <p> “ Xirvon is topping the charts, the best i have ever seen in recent times.
+                                        just too good!” </p>
                                     <img src="assets/img/icons/qout8.png" alt="" class="icon">
                                 </div>
                                 <div class="author mt-40">
@@ -933,7 +935,7 @@
                                 <p> Our highly skilled development teams specialized in data analysis. </p>
                                 <ul class="mt-20">
                                     <li> 
-                                        <a href="#"> <i class="fas fa-envelope-open me-2 color-main"></i> info@xirvon-info.com </a>    
+                                        <a href="#"> <i class="fas fa-envelope-open me-2 color-main"></i> support@xirvon.online </a>    
                                     </li>
                                     <li> 
                                         <a href="#"> <i class="fas fa-phone me-2 color-main"></i> 907 000 999 22 </a>    
